# agent-skill-scanner

./: .gitignore  EXPERIMENTAL_DESIGN.md  FINDINGS.md  HYPOTHESIS_REGISTRY.md  README.md  pyproject.toml  reproduce.sh
data/curated/: download_results.json  sample_manifest.json
data/mcp/: 01_filesystem.md  02_memory.md  03_fetch.md  04_git.md  05_time.md  06_github.md  07_playwright.md  08_firecrawl.md  09_ghidra.md  10_aws_sns_sqs.md  manifest.json
data/synthetic/: e0a_positive_control.md  e0b_negative_control.md  e0c_level1_obvious.md  e0c_level2_moderate.md  e0c_level3_subtle.md  e0c_level4_stealthy.md  e0c_level5_advanced.md
outputs/experiments/: comparison_results.json  comparison_summary.json  comparison_with_semgrep.json  e0_results.json  mcp_scan_results.json  official_skills_comparison.json  parameter_sweep.json  statistical_analysis.json
rules/: capability_escalation.yaml  composition_risk.yaml  data_exfiltration.yaml  prompt_injection.yaml
scripts/: download_skills.py  generate_figures.py  make_figures.py  parameter_sweep.py  run_comparison.py  statistical_analysis.py
skill_scanner/: __init__.py  cli.py  engine.py  parser.py  rules.py
skill_scanner/rules/: encoded_payload.yaml
tests/: test_scanner.py
