[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skill-scanner"
version = "0.1.0"
description = "Scan agent skill files for security vulnerabilities. 22 rules across prompt injection, capability escalation, data exfiltration, encoded payloads, and composition risks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "agent-security",
    "skill-scanner",
    "prompt-injection",
    "llm-security",
    "mcp",
    "openclaw",
    "ai-safety",
    "security-scanner",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/rexcoleman/agent-skill-scanner"
Documentation = "https://rexcoleman.dev"
Repository = "https://github.com/rexcoleman/agent-skill-scanner"
Issues = "https://github.com/rexcoleman/agent-skill-scanner/issues"

[project.scripts]
agent-skill-scan = "skill_scanner.cli:main"

[tool.setuptools.packages.find]
include = ["skill_scanner*"]

[tool.setuptools.package-data]
skill_scanner = ["rules/*.yaml"]
